plugins {
    id "de.undercouch.download" version "latest.release"
    id "de.esoco.gwt" version "1.3.1"
    id "org.sonarqube" version "latest.release"
}

repositories {
	mavenCentral()
}

sonar {
  properties {
    property "sonar.projectKey", "optyfr_JRomManager-WebClient"
    property "sonar.organization", "optyfr"
    property "sonar.host.url", "https://sonarcloud.io"
  }
}

ext.props = new Properties()
file("ver.properties").withInputStream { props.load(it) }

def scversion = props.getProperty("SmartGWT-Version")
def scdate = props.getProperty("SmartGWT-Date")
def gwtversion = props.getProperty("GWT-Version")

configurations.all {
    resolutionStrategy {
        dependencySubstitution {
            substitute module('com.google.gwt:gwt') using module("org.gwtproject:gwt:${gwtversion}")
            substitute module('com.google.gwt:gwt-user') using module("org.gwtproject:gwt-user:${gwtversion}")
            substitute module('com.google.gwt:gwt-dev') using module("org.gwtproject:gwt-dev:${gwtversion}")
            substitute module('com.google.gwt:gwt-codeserver') using module("org.gwtproject:gwt-codeserver:${gwtversion}")
            substitute module('com.google.gwt:gwt-servlet') using module("org.gwtproject:gwt-servlet:${gwtversion}")
        }
    }
}

apply plugin: 'java'
java {
    sourceCompatibility = 17
    targetCompatibility = 17
}
compileJava.options.encoding = 'UTF-8'

apply plugin: 'eclipse'

eclipse {
	classpath {
		downloadJavadoc = true
		downloadSources = true
		containers 'com.gwtplugins.gwt.eclipse.core.GWT_CONTAINER',
		           'org.eclipse.buildship.core.gradleclasspathcontainer'
	//	defaultOutputDir = file('war/WEB-INF/classes')
	}
}

apply plugin: 'de.undercouch.download'


task downloadSmartGWT(type: Download) {
    src([
        "https://www.smartclient.com/builds/SmartGWT/${scversion}p/LGPL/${scdate}/smartgwt.jar",
        "https://www.smartclient.com/builds/SmartGWT/${scversion}p/LGPL/${scdate}/smartgwt-skins.jar"
    ])
    dest "$buildDir/smartgwt-${scversion}p"
    onlyIfModified true
}

task dlSmartGWT(type: Download) {
    src "https://www.smartclient.com/builds/SmartGWT/${scversion}p/LGPL/${scdate}/smartgwt-${scversion}p.zip"
    dest buildDir
    onlyIfModified true
}

task extractSmartGWT(dependsOn: dlSmartGWT, type: Copy) {
    from(zipTree("$buildDir/smartgwt-${scversion}p.zip")) { 
        include '**/smartgwt.jar'
        include '**/smartgwt-skins.jar'
        includeEmptyDirs = false
    }
    into buildDir
}

task SmartGWT {
    dependsOn extractSmartGWT
    outputs.file "$buildDir/smartgwt-${scversion}p/smartgwt.jar" 
}

task SmartGWTSkins {
    dependsOn extractSmartGWT
    outputs.file "$buildDir/smartgwt-${scversion}p/smartgwt-skins.jar" 
}

apply plugin: 'war'
apply plugin: 'de.esoco.gwt'

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'
    implementation files(SmartGWT)
    implementation files(SmartGWTSkins)
}


sourceSets {
	main {
		java {
			srcDirs = ["src/main/java"]
		}
	}
}


gwt {

    module 'jrm.webui.Client'
	/** GWT version */
    gwtVersion = "${gwtversion}"
	/** Add the gwt-servlet lib */
	gwtServletLib = false
	/** Add the gwt-elemental lib */
	gwtElementalLib = false
	/** Add Google plugin config (only if plugin 'eclipse' is enabled) */
	gwtPluginEclipse = true//    minHeapSize = "512M"
	compile {
		/** The level of logging detail (ERROR, WARN, INFO, TRACE, 
		 * DEBUG, SPAM, ALL) */
		logLevel = "INFO"
		/** Compile a report that tells the "Story of Your Compile". */
		compileReport = false
		/** Compile quickly with minimal optimizations. */
		draftCompile = false
		/** Include assert statements in compiled output. */
		checkAssertions = false
		/** Script output style. (OBF, PRETTY, DETAILED)*/
		style = "OBF"
		/** Sets the optimization level used by the compiler. 
		 * 0=none 9=maximum. */
		optimize = 9
		/** Fail compilation if any input file contains an error. */
		failOnError = false
		/** Specifies Java source level. ("1.6", "1.7")*/
		sourceLevel = "auto"
		/** The number of local workers for compiling permutations. */
		localWorkers = 4
		/** The maximum memory to be used by local workers. */
		localWorkersMem = 2048
		/** Emit extra information allow chrome dev tools to display 
		 * Java identifiers in many places instead of JavaScript functions.
		 * (NONE, ONLY_METHOD_NAME, ABBREVIATED, FULL)*/
		methodNameDisplayMode = "NONE"
		/** Specifies JsInterop mode (NONE, JS, CLOSURE) */
		//jsInteropMode = "JS"
		/** Generate and export JsInterop (since GWT 2.8) */
		generateJsInteropExports = true

		/** shown all compile errors */
        strict = false

		war = "$buildDir/gwt/release"

		/** Java args */
        def lombokJar = project.configurations.annotationProcessor.filter { it.name.contains('lombok') }.singleFile
        javaArgs=['-Dfile.encoding' : 'UTF-8', ('-javaagent:'+lombokJar) : 'ECJ']
		maxHeapSize="1024m"
		minHeapSize="512m"
//		maxPermSize="128m"
	}
}

gwtCompile {
	doFirst {
		delete {
			delete "$buildDir/gwt/release"
		}
	}
}

war
{
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from "war"
	rootSpec.exclude("**/jrm")
	rootSpec.exclude("**/*.jar")
	archiveBaseName = "release"
	archiveVersion = null
	doFirst {
		delete {
			delete "war/smartgwt"
		}
		copy {
			from "$buildDir/gwt/release"
			into "war"
            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
		}
	}
}

jar {
	dependsOn gwtCompile
	exclude '/jrm'
	from ("$buildDir/gwt/release") {
		into('webclient')
	}
	from ("$projectDir/war/index.html") {
		into('webclient')
	}
	from ("$projectDir/certs") {
		into('certs')
	}
}

build.dependsOn jar


task webZip(type: Zip, dependsOn: gwtCompile) {
	from ("$buildDir/gwt/out/smartgwt")
	into "webclient"
	archiveBaseName = 'release'
	archiveFileName = "release.zip"
	destinationDirectory = file("$buildDir/distributions")
}

build.dependsOn webZip

tasks.named("jar") {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

task delombok(type: JavaExec) {
    def lombokJar = configurations.annotationProcessor.filter { it.name.contains('lombok') }
    classpath = lombokJar
    mainClass = 'lombok.launch.Main'

    doFirst {
        args = [
            "delombok",
            "src/main/java",
            "-d", "$buildDir/generated/delombok/src/main/java",
            "--classpath", (sourceSets.main.compileClasspath + lombokJar).asPath
        ]
    }
}


javadoc {
    dependsOn delombok
    source = fileTree("$buildDir/generated/delombok/src/main/java") {
        include '**/*.java'
    }
    classpath = sourceSets.main.output.classesDirs + configurations.compileClasspath
    exclude '**/*.xml', '**/*.properties'
    options {
        encoding = 'UTF-8'
        memberLevel = JavadocMemberLevel.PACKAGE
        outputLevel = JavadocOutputLevel.QUIET
        addBooleanOption('Xdoclint:none', true)
        addStringOption('Xmaxwarns', '0')
        links("https://docs.oracle.com/en/java/javase/${java.targetCompatibility}/docs/api/")
        links("https://smartclient.com/smartgwt-${scversion}/javadoc/")
        links("https://www.gwtproject.org/javadoc/latest/")
    }
}
